# binance-futures-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  app_backup.py  averagingDown.py  averagingDown_test.py  averaging_down.py  averaging_down_async.py  backtest.py  bak_averaging_down_async.py  bot.py  bull_bear_async.py  calc_entryPrice_and_ROI.py  ccxt_prac.py  ccxt_prac_pro.py  comm.py  config.py  deploy.sh  docker-compose.yml  docker-install.sh  main.py  matts.py  module_ema.py  module_rsi.py  module_stochrsi.py  multi_factor_trade.py  pyproject.toml  random_tp_3.py  requirements.txt  run-strategy.sh  setup-venv.sh  shrimp-rules.md  statege.md  stoch_rsi_cross.py  stoch_rsi_cross_async.py  test.ipynb  test.py  (+1 more)
.claude/: settings.json  settings.local.json
.cursor/rules/: positions-example.mdc
backtest/: backtest_bb_scalp.py  backtest_min15_3p.py  backtest_random_entry.py  backtest_v2_no_avgdown.py  backtest_v3_stochrsi.py  backtest_volume_contrarian.py  backtest_volume_slope.py  backtest_volume_trailing.py
data_structure/: positions.json
doc/: deploy-guide.md  min15_3p_strategy.md
modules/: module_atr.py  module_common.py  module_ema.py  module_ma.py  module_rsi.py  module_score.py
prac/: calc_entryPrice_and_ROI.py  ccxt_prac.py  test.ipynb
strategies/: hour_3p_strategy.py  min15_3p_strategy.md  min15_3p_strategy.py  spot_simple_strategy.py  trailing_atr.md  trailing_atr.py
templates/: dashboard.html  index.html  profitTble.py
